archiso/airootfs/etc/iptables/ip6tables.rules
# Generated by ip6tables-save v1.8.10 on Sun Nov 26 11:31:53 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 4 --hashlimit-mode srcip,dstport --hashlimit-name t_hashlinit_INPUT --hashlimit-htable-expire 120000 -j ACCEPT
-A INPUT -m limit --limit 1/sec --limit-burst 4 -j ACCEPT
-A INPUT -m recent --rcheck --seconds 150 --hitcount 5 --name DEFAULT --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 4 --hashlimit-mode srcip,dstport --hashlimit-name t_hashlinit_FORWARD --hashlimit-htable-expire 120000 -j ACCEPT
-A FORWARD -m limit --limit 1/sec --limit-burst 4 -j ACCEPT
-A FORWARD -m recent --rcheck --seconds 150 --hitcount 5 --name DEFAULT --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j ACCEPT
-A OUTPUT -m owner --uid-owner 1000-2000 -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 4 --hashlimit-mode srcip,dstport --hashlimit-name t_hashlinit_OUTPUT --hashlimit-htable-expire 120000 -j ACCEPT
-A OUTPUT -m limit --limit 1/sec --limit-burst 4 -j ACCEPT
-A OUTPUT -m recent --rcheck --seconds 150 --hitcount 5 --name DEFAULT --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j ACCEPT
COMMIT
# Completed on Sun Nov 26 11:31:53 2023
